Fix z-index

--- a/src/sass/components/_indeterminate-toggle.scss
+++ b/src/sass/components/_indeterminate-toggle.scss
@@ -1,5 +1,6 @@
 @import "~@wordpress/base-styles/mixins";
 @import "~@wordpress/base-styles/variables";
+@import "~@wordpress/base-styles/z-index";
 
 $toggle-width: 36px;
 $toggle-height: 18px;
@@ -141,7 +142,7 @@ $toggle-border-width: 2px;
 		position: absolute;
 		top: 0;
 		left: 0;
-		z-index: z-index(".indeterminate-toggle__input");
+		z-index: z-index(".components-form-toggle__input");
 
 		width: 100%;
 		height: 100%;
